--- a/deploiement/sources/zone_dmz/ferm/dns_ferm.conf
+++ b/deploiement/sources/zone_dmz/ferm/dns_ferm.conf
@@ -7,11 +7,13 @@
 
 
 # Depuis l'extérieur sur l'interface principale
+@def $HAVE_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
 @def $OPEN_PORT_FRONT_REQUEST = (53);
 @def $NEED_UDP_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_FRONT_REQUEST = (53);
 
 # Depuis l'intérieur sur l'interface principale
+@def $HAVE_FRONT_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $OPEN_PORT_FRONT_ACCESS = ();
 @def $NEED_UDP_FRONT_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_FRONT_ACCESS = ();
@@ -38,8 +40,9 @@ table filter {
         interface lo ACCEPT;
         interface $IF_ADMIN ACCEPT;
 
-
-        interface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_REQUEST ACCEPT;
+        @if $HAVE_FRONT_REQUEST {
+            interface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_REQUEST ACCEPT;
+        }
 
         @if $NEED_UDP_FRONT_REQUEST {
             interface $IF_FRONT proto udp dport $UDP_OPEN_PORT_FRONT_REQUEST ACCEPT;
@@ -64,8 +67,9 @@ table filter {
         mod state state (ESTABLISHED RELATED) ACCEPT;
         outerface lo ACCEPT;
 
-
-        outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
+        @if $HAVE_FRONT_ACCESS {
+            outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
+        }
 
         @if $NEED_UDP_FRONT_ACCESS {
             outerface $IF_BACK proto udp dport $UDP_OPEN_PORT_FRONT_ACCESS ACCEPT;
