--- a/deploiement/sources/zone_proxy/ct_proxy.yml
+++ b/deploiement/sources/zone_proxy/ct_proxy.yml
@@ -74,6 +74,10 @@
 
 - hosts: zoneproxy
   tasks:
+    - name: Set timezone for Proxy
+      timezone:
+        name: Europe/Paris
+
     - name: APT configuration for Proxy
       copy:
         dest: "/etc/apt/apt.conf.d/01proxy"
