Ajout du protocole VRRP pour keepalived

--- a/deploiement/sources/zone_dmz/ferm/haproxy_ferm.conf
+++ b/deploiement/sources/zone_dmz/ferm/haproxy_ferm.conf
@@ -14,7 +14,7 @@
 
 # Depuis l'intérieur sur l'interface principale
 @def $HAVE_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_ACCESS = (80 443 8006);
+@def $OPEN_PORT_FRONT_ACCESS = (22 80 443 8006);
 @def $NEED_UDP_FRONT_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_FRONT_ACCESS = (53);
 
@@ -32,6 +32,10 @@
 @def $UDP_OPEN_PORT_BACK_ACCESS = (53);
 
 
+# Besoin de VRRP sur IF_VRRP
+@def $NEED_VRRP = 1; #0 pour NON 1 pour OUI
+@def $IF_VRRP = eth0;
+
 table filter {
     chain INPUT {
         policy DROP;
@@ -42,6 +46,10 @@ table filter {
 
         @if $HAVE_FRONT_REQUEST {
             interface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_REQUEST ACCEPT;
+        }
+
+        @if $NEED_VRRP {
+            interface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_REQUEST {
@@ -69,6 +77,10 @@ table filter {
 
         @if $HAVE_FRONT_ACCESS {
             outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
+        }
+
+        @if $NEED_VRRP {
+            outerface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_ACCESS {
