--- a/deploiement/sources/zone_dmz/ferm/dns_ferm.conf
+++ b/deploiement/sources/zone_dmz/ferm/dns_ferm.conf
@@ -32,6 +32,10 @@
 @def $UDP_OPEN_PORT_BACK_ACCESS = ();
 
 
+# Besoin de VRRP sur IF_VRRP
+@def $NEED_VRRP = 0; #0 pour NON 1 pour OUI
+@def $IF_VRRP = eth0;
+
 table filter {
     chain INPUT {
         policy DROP;
@@ -42,6 +46,10 @@ table filter {
 
         @if $HAVE_FRONT_REQUEST {
             interface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_REQUEST ACCEPT;
+        }
+
+        @if $NEED_VRRP {
+            interface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_REQUEST {
@@ -69,6 +77,10 @@ table filter {
 
         @if $HAVE_FRONT_ACCESS {
             outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
+        }
+
+        @if $NEED_VRRP {
+            outerface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_ACCESS {
