--- a/deploiement/sources/zone_dmz/ferm/haproxy_ferm.conf
+++ b/deploiement/sources/zone_dmz/ferm/haproxy_ferm.conf
@@ -14,8 +14,8 @@
 
 # Depuis l'intérieur sur l'interface principale
 @def $HAVE_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_ACCESS = (22 80 443 8006);
-@def $NEED_UDP_FRONT_ACCESS = 0; #0 pour NON 1 pour OUI
+@def $OPEN_PORT_FRONT_ACCESS = (22 80 443 8006 53);
+@def $NEED_UDP_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_FRONT_ACCESS = (53);
 
 
@@ -84,7 +84,7 @@ table filter {
         }
 
         @if $NEED_UDP_FRONT_ACCESS {
-            outerface $IF_BACK proto udp dport $UDP_OPEN_PORT_FRONT_ACCESS ACCEPT;
+            outerface $IF_FRONT proto udp dport $UDP_OPEN_PORT_FRONT_ACCESS ACCEPT;
         }
 
         @if $HAVE_BACK_ACCESS {
