--- a/deploiement/sources/zone_dmz/ferm/proxyint_ferm.conf
+++ b/deploiement/sources/zone_dmz/ferm/proxyint_ferm.conf
@@ -1,6 +1,6 @@
-@def $IF_ADMIN = eth3;
+@def $IF_ADMIN = eth5;
 @def $IF_FRONT = eth0;
-@def $IF_BACK = (eth1 eth2);
+@def $IF_BACK = (eth1 eth2 eth3 eth4);
 
 
 # REQUEST : EXT -> INT | ACCESS : INT -> EXT
@@ -8,22 +8,22 @@
 
 # Depuis l'extérieur sur l'interface principale
 @def $HAVE_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_REQUEST = (53);
-@def $NEED_UDP_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_FRONT_REQUEST = (53);
+@def $OPEN_PORT_FRONT_REQUEST = (3128 9999);
+@def $NEED_UDP_FRONT_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_FRONT_REQUEST = ();
 
 # Depuis l'intérieur sur l'interface principale
 @def $HAVE_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_ACCESS = (53);
-@def $NEED_UDP_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
+@def $OPEN_PORT_FRONT_ACCESS = (10:65535);
+@def $NEED_UDP_FRONT_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_FRONT_ACCESS = (53);
 
 
 # Depuis l'extérieur sur les interfaces secondaires
 @def $HAVE_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_BACK_REQUEST = (53);
-@def $NEED_UDP_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_BACK_REQUEST = (53);
+@def $OPEN_PORT_BACK_REQUEST = (3128 9999);
+@def $NEED_UDP_BACK_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_BACK_REQUEST = ();
 
 # Depuis l'intérieur sur les interfaces secondaires
 @def $HAVE_BACK_ACCESS = 0; #0 pour NON 1 pour OUI
@@ -76,7 +76,7 @@ table filter {
         outerface lo ACCEPT;
 
         @if $HAVE_FRONT_ACCESS {
-            outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
+            outerface $IF_FRONT proto tcp ACCEPT;
         }
 
         @if $NEED_VRRP {
