--- a/deploiement/sources/zone_proxy/ferm/nginx_ferm.conf
+++ b/deploiement/sources/zone_proxy/ferm/nginx_ferm.conf
@@ -67,12 +67,12 @@ table filter {
         mod state state (ESTABLISHED RELATED) ACCEPT;
         outerface lo ACCEPT;
 
-        @if $_FRONT_ACCESS {
+        @if $HAVE_FRONT_ACCESS {
             outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_ACCESS {
-            outerface $IF_BACK proto udp dport $UDP_OPEN_PORT_FRONT_ACCESS ACCEPT;
+            outerface $IF_FRONT proto udp dport $UDP_OPEN_PORT_FRONT_ACCESS ACCEPT;
         }
 
         @if $HAVE_BACK_ACCESS {
