--- a/deploiement/sources/zone_interne/ferm/ldap_ferm.conf
+++ b/deploiement/sources/zone_interne/ferm/ldap_ferm.conf
@@ -1,6 +1,6 @@
-@def $IF_ADMIN = eth3;
+@def $IF_ADMIN = eth2;
 @def $IF_FRONT = eth0;
-@def $IF_BACK = (eth1 eth2);
+@def $IF_BACK = ();
 
 
 # REQUEST : EXT -> INT | ACCESS : INT -> EXT
@@ -8,9 +8,9 @@
 
 # Depuis l'extérieur sur l'interface principale
 @def $HAVE_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_REQUEST = (53);
-@def $NEED_UDP_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_FRONT_REQUEST = (53);
+@def $OPEN_PORT_FRONT_REQUEST = (389);
+@def $NEED_UDP_FRONT_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_FRONT_REQUEST = ();
 
 # Depuis l'intérieur sur l'interface principale
 @def $HAVE_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
@@ -20,21 +20,17 @@
 
 
 # Depuis l'extérieur sur les interfaces secondaires
-@def $HAVE_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_BACK_REQUEST = (53);
-@def $NEED_UDP_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_BACK_REQUEST = (53);
+@def $HAVE_BACK_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $OPEN_PORT_BACK_REQUEST = ();
+@def $NEED_UDP_BACK_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_BACK_REQUEST = ();
 
 # Depuis l'intérieur sur les interfaces secondaires
 @def $HAVE_BACK_ACCESS = 0; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_BACK_ACCESS = ();
+@def $OPEN_PORT_BACK_ACCESS = (80);
 @def $NEED_UDP_BACK_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_BACK_ACCESS = ();
 
-
-# Besoin de VRRP sur IF_VRRP
-@def $NEED_VRRP = 0; #0 pour NON 1 pour OUI
-@def $IF_VRRP = eth0;
 
 table filter {
     chain INPUT {
@@ -46,10 +42,6 @@ table filter {
 
         @if $HAVE_FRONT_REQUEST {
             interface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_REQUEST ACCEPT;
-        }
-
-        @if $NEED_VRRP {
-            interface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_REQUEST {
@@ -77,10 +69,6 @@ table filter {
 
         @if $HAVE_FRONT_ACCESS {
             outerface $IF_FRONT proto tcp dport $OPEN_PORT_FRONT_ACCESS ACCEPT;
-        }
-
-        @if $NEED_VRRP {
-            outerface $IF_VRRP proto vrrp ACCEPT;
         }
 
         @if $NEED_UDP_FRONT_ACCESS {
