--- a/deploiement/sources/zone_interne/ferm/mail_ferm.conf
+++ b/deploiement/sources/zone_interne/ferm/mail_ferm.conf
@@ -1,16 +1,14 @@
-@def $IF_ADMIN = eth3;
+@def $IF_ADMIN = eth1;
 @def $IF_FRONT = eth0;
-@def $IF_BACK = (eth1 eth2);
-
+@def $IF_BACK = ();
 
 # REQUEST : EXT -> INT | ACCESS : INT -> EXT
 
-
 # Depuis l'extérieur sur l'interface principale
 @def $HAVE_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_FRONT_REQUEST = (53);
-@def $NEED_UDP_FRONT_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_FRONT_REQUEST = (53);
+@def $OPEN_PORT_FRONT_REQUEST = (25 465 587 143 993 4190);
+@def $NEED_UDP_FRONT_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_FRONT_REQUEST = ();
 
 # Depuis l'intérieur sur l'interface principale
 @def $HAVE_FRONT_ACCESS = 1; #0 pour NON 1 pour OUI
@@ -20,17 +18,16 @@
 
 
 # Depuis l'extérieur sur les interfaces secondaires
-@def $HAVE_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $OPEN_PORT_BACK_REQUEST = (53);
-@def $NEED_UDP_BACK_REQUEST = 1; #0 pour NON 1 pour OUI
-@def $UDP_OPEN_PORT_BACK_REQUEST = (53);
+@def $HAVE_BACK_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $OPEN_PORT_BACK_REQUEST = ();
+@def $NEED_UDP_BACK_REQUEST = 0; #0 pour NON 1 pour OUI
+@def $UDP_OPEN_PORT_BACK_REQUEST = ();
 
 # Depuis l'intérieur sur les interfaces secondaires
 @def $HAVE_BACK_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $OPEN_PORT_BACK_ACCESS = ();
 @def $NEED_UDP_BACK_ACCESS = 0; #0 pour NON 1 pour OUI
 @def $UDP_OPEN_PORT_BACK_ACCESS = ();
-
 
 # Besoin de VRRP sur IF_VRRP
 @def $NEED_VRRP = 0; #0 pour NON 1 pour OUI
